--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -1,8 +1,16 @@
+<h4>Businesses</h4>
+<div id='search-bar'>
+  <% form_tag businesses_path, method: :get do %>
+    <%= text_field_tag :search, nil, placeholder: 'search'%>
+    <%= submit_tag 'go'%>
+  <% end %>
+</div>
+
 <section class='all-businesses'>
   <% @businesses.each do |business| %>
     <section class='business'>
       <div class='business-name'>
-        <h3><%=business.name%></h3>
+        <h3><%= link_to business.name, business_path(business)%></h3>
       </div>
       <div class='business-info'>
         <h4>Location: <%=business.location%></h4>
@@ -17,5 +25,4 @@
       </div>
     </section>
   <% end %>
-
 </section>
