--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -1,6 +1,5 @@
-<h4>Businesses</h4>
 <div id='search-bar'>
-  <% form_tag businesses_path, method: :get do %>
+  <%= form_tag businesses_path, method: :get do %>
     <%= text_field_tag :search, nil, placeholder: 'search'%>
     <%= submit_tag 'go'%>
   <% end %>
