Create contact info migration and model

--- a/app/views/developers/edit.html.erb
+++ b/app/views/developers/edit.html.erb
@@ -26,8 +26,8 @@
       <%= f.text_field :location %>
     </li>
     <li>
-      <%= f.label :password_confirmation %>
-      <%= f.password_field :password_confirmation %>
+      <%= f.label :describe_yourself %>
+      <%= f.text_area :description %>
     </li>
     <li>
     <%= f.submit %>
