Fix sessions log in location

--- a/app/views/developers/edit.html.erb
+++ b/app/views/developers/edit.html.erb
@@ -29,6 +29,10 @@
       <%= f.label :describe_yourself %>
       <%= f.text_area :description %>
     </li>
+     <li>
+      <%= f.label :list_your_skills %>
+      <%= f.text_area :description %>
+    </li>
     <li>
     <%= f.submit %>
     </li>
