--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<% if user_signed_in? %>
+<%= current_user.first_name %>
+<%= current_user.id %>
+<% end %>
 <%= yield %>
 
 </body>
