--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
         <%= link_to 'Home', root_path %>
         <% if current_user %>
           <%= link_to current_user.first_name, user_path(current_user) %>
+          <%= link_to 'inbox', conversations_path %>
           <%= link_to 'Logout', session_path, method: :delete %>
         <% else %>
           <%= link_to 'Business Registration', new_owner_path%>
