--- a/app/views/developers/new.html.erb
+++ b/app/views/developers/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @developer do |f| %>
+<%= form_for @developer, html: { multipart: true } do |f| %>
 
 <fieldset>
   <legend>Sign Up</legend>
