--- a/app/views/developers/show.html.erb
+++ b/app/views/developers/show.html.erb
@@ -3,5 +3,5 @@
 <h1> <%=@developer.first_name%></h1>
 <h3><%=@developer.location%></h3>
 <h4>Bio: <%= @developer.description %></h4>
-
+<%= link_to image_tag(@developer.avatar.url(:thumb)), @developer.avatar.url %>
 
