--- a/app/views/owners/new.html.erb
+++ b/app/views/owners/new.html.erb
@@ -24,6 +24,10 @@
       <%= f.password_field :password_confirmation %>
     </li>
     <li>
+      <%= f.label :avatar %>
+      <%= f.file_field :avatar %>
+    </li>
+    <li>
     <%= f.submit %>
     </li>
   </ul>
