complete message real time function

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -6,7 +6,7 @@
 </div>
 
 
-<%= form_for [@conversation, @message], html: {class: 'ui reply form'} do |f| %>
+<%= form_for [@conversation, @message], remote: true, html: {class: 'ui reply form'} do |f| %>
  <div class=”field”>
    <%= f.text_area :body, class: 'form-control' %>
  </div>
