Create omniauth authentication to near completion

--- a/app/views/developers/new.html.erb
+++ b/app/views/developers/new.html.erb
@@ -1,3 +1,6 @@
+<%= link_to "Register with Facebook", "/auth/facebook" %>
+<%= link_to "Register with Github", "/auth/github" %>
+
 <%= form_for @developer, html: { multipart: true } do |f| %>
 
 <fieldset>
