--- a/app/views/owners/new.html.erb
+++ b/app/views/owners/new.html.erb
@@ -1,5 +1,6 @@
-<%= form_for @owner, html: { multipart: true } do |f| %>
+<%= link_to "Register with Facebook", "/auth/facebook" %>
 
+<%= form_for @owner, html: { multipart: true } do |f| %>
 <fieldset>
   <legend>Sign Up</legend>
   <ul>
