Add review functions, association between user and review not working

--- a/app/views/developers/index.html.erb
+++ b/app/views/developers/index.html.erb
@@ -1,6 +1,6 @@
 <% @developers.each do |developer| %>
 <div>
-<%= developer.first_name %>
+<%= link_to developer.first_name, developer_path(developer) %>
 <%= link_to "Send Message", "#", class: "btn btn-success btn-xs start-conversation",
                     "data-sid" => current_user.id, "data-rip" => developer.id %>
 </div>
