--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
     <nav>
         <%= link_to 'Home', root_path %>
         <% if current_user %>
+        <%= link_to "Developers", developers_path %>
           <%= link_to current_user.first_name, user_path(current_user) %>
           <%= link_to 'inbox', conversations_path %>
           <%= link_to 'Logout', session_path, method: :delete %>
