--- a/app/views/businesses/new.html.erb
+++ b/app/views/businesses/new.html.erb
@@ -18,7 +18,7 @@
       <%= f.text_field :location %>
     </li>
     <li>
-      <%= f.label :photos %>
+      <%= f.label :photo %>
       <%= file_field_tag "images[]", type: :file, multiple: true %>
     </li>
 
