--- a/app/views/owners/show.html.erb
+++ b/app/views/owners/show.html.erb
@@ -1,8 +1,8 @@
 <h1><%= @owner.first_name %></h1>
 
 <h4>Bio: <%= @owner.description %></h4>
-
-
+<%= link_to image_tag(@owner.avatar.url(:thumb)), @owner.avatar.url %>
+<%=link_to 'Create your Business Page', new_business_path %>
  <% if @owner.id != current_user.id %>
      <div class=”item”>
    <%= @owner.first_name %> <%= link_to "Message me!", conversations_path(sender_id: current_user.id, recipient_id: @owner.id), method: "post"%>
