--- a/app/views/developers/new.html.erb
+++ b/app/views/developers/new.html.erb
@@ -30,6 +30,8 @@
       <%= f.label :avatar %>
       <%= f.file_field :avatar %>
     </li>
+    <%= f.hidden_field :provider, value: "buildmybusiness" %>
+    <%= f.hidden_field :uid%>
     <li>
     <%= f.submit %>
     </li>
