Initial css styling of body and button

--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -20,5 +20,5 @@
     <%= f.hidden_field :reviewee, value: @reviewee %>
   <%= f.hidden_field :review_type, value: current_user.type %>
 
-  <%= f.submit "Create" %>
+  <%= f.submit "Create", class: 'button' %>
 <% end %>
