--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -1,7 +1,7 @@
 <div id='search-bar'>
   <%= form_tag businesses_path, method: :get do %>
     <%= text_field_tag :search, nil, placeholder: 'search'%>
-    <%= submit_tag 'go'%>
+    <%= submit_tag 'go', class: 'button'%>
   <% end %>
 </div>
 
