--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -12,7 +12,7 @@
  </div>
  <%= f.text_field :user_id, value: current_user.id, type: 'hidden' %>
  <div>
-   <%= f.submit 'Add Reply', class: 'ui blue labeled submit icon button' %>
+   <%= f.submit 'Add Reply', class: 'button' %>
  </div>
 <% end %>
 
