--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,51 +1,7 @@
 /*
+ *= require normalize-rails
+ *= require main
+ *= require conversations
  *= require_tree .
  *= require_self
  */
-
-body{
-  font-family: 'Open Sans', sans-serif;
-  margin: 20px;
-  margin-top: 0px
-}
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-
-  .button,
-  button {
-    background-color: #eeeeee;
-    border: 0.1rem solid #ffffff;
-    border-radius: 0.3rem;
-    color: #333333;
-    cursor: pointer;
-    display: inline-block;
-    font-size: 0.6rem;
-    font-weight: 400;
-    height: 2rem;
-    letter-spacing: 0.1rem;
-    line-height: 2rem;
-    padding: 0 1rem;
-    text-align: center;
-    text-transform: uppercase;
-    white-space: nowrap;
-    margin: 5px;
-  }
-  .button:hover, .button:focus,
-  button:hover,
-  button:focus,
-  input[type='button']:hover,
-  input[type='button']:focus,
-  input[type='reset']:hover,
-  input[type='reset']:focus,
-  input[type='submit']:hover,
-  input[type='submit']:focus {
-    background-color: #606c76;
-    border-color: #606c76;
-    color: #ffffff;
-    outline: 0;
-  }
