--- a/app/views/businesses/edit.html.erb
+++ b/app/views/businesses/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @business do |f| %>
+<%= form_for @business, html: { multipart: true } do |f| %>
 
 <ul>
     <li>
@@ -17,10 +17,16 @@
       <%= f.label :location %>
       <%= f.text_field :location %>
     </li>
-    
+      <%= f.hidden_field :provider, value: "buildmybusiness" %>
+      <%= f.hidden_field :uid%>
     <li>
-    <%= f.submit %>
+      <%= f.label :photo %>
+      <%= file_field_tag "images[]", type: :file, multiple: true %>
+    </li>
+
+    <li>
+      <%= f.submit %>
     </li>
   </ul>
-  
+
 <% end %>
