--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -13,6 +13,11 @@
      <h4>Category<%=@business.category%></h4>
      <p><%=@business.description%></p>
   </div>
+  <div>
+    <% if @business.editable_by? current_user %>
+      <%= link_to 'edit', edit_business_path(@business)%>
+    <% end %>
+  </div>
 
   <div>
     <h4>Interested?</h4>
