--- a/app/views/developers/show.html.erb
+++ b/app/views/developers/show.html.erb
@@ -6,4 +6,9 @@
 <% if has_avatar? @developer %>
   <%= link_to image_tag(@developer.avatar.url(:thumb)), @developer.avatar.url %>
 <% end %>
+
+<% if @developer.editable_by?(current_user) %>
+  <%= link_to 'edit', edit_developer_path(@developer) %>
+<% end %>
+
 <%= link_to "leave reivew", new_developer_review_path(@developer) %>
