--- a/app/views/owners/show.html.erb
+++ b/app/views/owners/show.html.erb
@@ -1,10 +1,18 @@
 <h1><%= @owner.first_name %></h1>
 
 <h4>Bio: <%= @owner.description %></h4>
-<%= link_to image_tag(@owner.avatar.url(:thumb)), @owner.avatar.url %>
+<% if has_avatar? @owner %>
+  <%= link_to image_tag(@owner.avatar.url(:thumb)), @owner.avatar.url %>
+<% end %>
+
+<% if @owner.editable_by?(current_user) %>
+  <%= link_to 'edit', edit_owner_path(@owner) %>
+<% end %>
+
 <%=link_to 'Create your Business Page', new_business_path %>
- <% if @owner.id != current_user.id %>
-     <div class=”item”>
-   <%= @owner.first_name %> <%= link_to "Message me!", conversations_path(sender_id: current_user.id, recipient_id: @owner.id), method: "post"%>
- </div>
-  <% end %>
+
+<% if @owner.id != current_user.id %>
+  <div class=”item”>
+    <%= @owner.first_name %> <%= link_to "Message me!", conversations_path(sender_id: current_user.id, recipient_id: @owner.id), method: "post"%>
+  </div>
+<% end %>
