Initial maps work

--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -26,4 +26,10 @@
   <div>
     <h4>Status</h4>
   </div>
+
+  <div id = 'map-container'>
+    <div id = 'map-canvas'>
+
+    </div>
+  </div>
 </section>
