Modify migrations and controllers for user registration with & without omniauth

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -30,6 +30,8 @@ ul {
     white-space: nowrap;
     margin: 5px;
   }
+
+
   .button:hover, .button:focus,
   button:hover,
   button:focus,
@@ -45,3 +47,7 @@ ul {
     outline: 0;
   }
 
+.profile-pic {
+  width: 100px;
+  height: 100px;
+}
