--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -1,9 +1,18 @@
-<div id='search-bar'>
-  <%= form_tag businesses_path, method: :get do %>
-    <%= text_field_tag :search, nil, placeholder: 'search'%>
-    <%= submit_tag 'go', class: 'button'%>
-  <% end %>
+<div>
+  <div id="search-bar">
+    <%= form_tag developers_path, method: :get do %>
+      <%= text_field_tag :search, nil, placeholder: "Search by Skill" %>
+      <%= submit_tag "Go" %>
+    <% end %>
+  </div>
+  <div id='search-bar'>
+    <%= form_tag businesses_path, method: :get do %>
+      <%= text_field_tag :search, nil, placeholder: 'search'%>
+      <%= submit_tag 'go', class: 'button'%>
+    <% end %>
+  </div>
 </div>
+
 
 <section class='all-businesses'>
   <% @businesses.each do |business| %>
