--- a/app/views/owners/show.html.erb
+++ b/app/views/owners/show.html.erb
@@ -3,6 +3,10 @@
 <h4>Bio: <%= @owner.description %></h4>
 <% if has_avatar? @owner %>
   <%= link_to image_tag(@owner.avatar.url(:thumb)), @owner.avatar.url %>
+<% elsif @auth %>
+  <%= image_tag(@auth['info']['image'], size:"100x100>") %>
+<% else %>
+  <%= image_tag "blank-profile-pic.png", class: 'profile-pic' %>
 <% end %>
 
 <% if @owner.editable_by?(current_user) %>
