--- a/app/views/businesses/new.html.erb
+++ b/app/views/businesses/new.html.erb
@@ -10,12 +10,12 @@
       <%= f.text_area :description %>
     </li>
     <li>
-      <%= f.label :category %>
-      <%= f.text_field :category %>
-    </li>
-    <li>
       <%= f.label :location %>
       <%= f.text_field :location %>
+    </li>
+    <li>
+      <%= label_tag :categories, "Your Business' Categories (comma separated)" %>
+      <%= text_area_tag :categories, nil %>
     </li>
     <li>
       <%= f.label :photo %>
