Test css commit

--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -27,9 +27,7 @@
     <h4>Status</h4>
   </div>
 
-  <div id = 'map-container'>
-    <div id = 'map-canvas'>
-
-    </div>
+  <div style='width: 800px;'>
+  <div id="map" style='width: 800px; height: 400px;'></div>
   </div>
 </section>
