--- a/app/views/developers/index.html.erb
+++ b/app/views/developers/index.html.erb
@@ -1,7 +1,7 @@
-<div id="search-bar">
+<div class="search-bar">
   <%= form_tag developers_path, method: :get do %>
-    <%= text_field_tag :search, nil, placeholder: "Search by Skill" %>
-    <%= submit_tag "Go" %>
+    <%= text_field_tag :search, nil, placeholder: "Search by Skill", class: 'search-field'%>
+    <%= submit_tag "Go", class: "button" %>
   <% end %>
 </div>
 
