Update CSS styles for forms

--- a/app/views/businesses/new.html.erb
+++ b/app/views/businesses/new.html.erb
@@ -1,4 +1,5 @@
-<%= form_for @business, html: { multipart: true } do |f| %>
+<section id='form'>
+  <%= form_for @business, html: { multipart: true } do |f| %>
 
   <ul>
     <li>
@@ -27,4 +28,5 @@
     </li>
   </ul>
 
-<% end %>
+  <% end %>
+</section>
