--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -5,6 +5,11 @@ body{
   background-color: #f7f7f7
 }
 
+#container {
+  max-width: 1100px;
+  margin: auto;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -66,12 +71,58 @@ a {
   text-decoration: none;
 }
 
-#footer-bar{
-  margin: 1rem;
-  float:right
+#footer{
+  text-align: center;
+  padding: 2em 0;
 }
 
 .profile-pic {
   width: 100px;
   height: 100px;
 }
+
+#form {
+  max-width: 300px;
+  margin: 10px auto;
+  padding: 10px 20px;
+  border-radius: 8px;
+}
+
+
+input[type="text"],
+input[type="password"],
+input[type="email"],
+input[type="search"],
+input[type="submit"],
+select {
+  background: rgba(255,255,255,0.1);
+  border: none;
+  font-size: 16px;
+  height: auto;
+  margin: 0;
+  outline: 0;
+  padding: 15px;
+  width: 100%;
+  background-color: #e8eeef;
+  color: #8a97a0;
+  box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
+  margin-bottom: 30px;
+}
+
+input[type="file"] {
+  border: none;
+  font-size: 16px;
+  height: auto;
+  margin: 0;
+  outline: 0;
+  padding: 15px;
+  width: 100%;
+  color: #8a97a0;
+  margin-bottom: 30px;
+}
+
+input[type="submit"] {
+  background: #ff4448;
+  color: #fff;
+}
+
