--- a/app/views/owners/new.html.erb
+++ b/app/views/owners/new.html.erb
@@ -1,45 +1,46 @@
-<%= link_to "Register with Facebook", "/auth/facebook" %>
+<section id='form'>
+  <%= link_to "Register with Facebook", "/auth/facebook" %>
+  <%= form_for @owner, html: { multipart: true } do |f| %>
 
-<%= form_for @owner, html: { multipart: true } do |f| %>
-<fieldset>
-  <legend>Sign Up</legend>
-  <ul>
-    <li>
-      <%= f.label :first_name %>
-      <%= f.text_field :first_name %>
-    </li>
-    <li>
-      <%= f.label :last_name %>
-      <%= f.text_field :last_name %>
-    </li>
-    <li>
-      <%= f.label :uid, value="Email" %>
-      <%= f.text_field :uid %>
-    </li>
-    <li>
-      <%= f.label :password %>
-      <%= f.password_field :password %>
-    </li>
-    <li>
-      <%= f.label :password_confirmation %>
-      <%= f.password_field :password_confirmation %>
-    </li>
-    <li>
-      <%= f.label :avatar %>
-      <%= f.file_field :avatar %>
-    </li>
-    <%= f.hidden_field :provider, value: "buildmybusiness" %>
-    <li>
-    <%= f.submit %>
-    </li>
-  </ul>
-</fieldset>
-<% end %>
+    <h4>Sign Up</h4>
+    <ul>
+      <li>
+        <%= f.label :first_name %>
+        <%= f.text_field :first_name %>
+      </li>
+      <li>
+        <%= f.label :last_name %>
+        <%= f.text_field :last_name %>
+      </li>
+      <li>
+        <%= f.label :uid, value="Email" %>
+        <%= f.text_field :uid %>
+      </li>
+      <li>
+        <%= f.label :password %>
+        <%= f.password_field :password %>
+      </li>
+      <li>
+        <%= f.label :password_confirmation %>
+        <%= f.password_field :password_confirmation %>
+      </li>
+      <li>
+        <%= f.label :avatar %>
+        <%= f.file_field :avatar %>
+      </li>
+      <%= f.hidden_field :provider, value: "buildmybusiness" %>
+      <li>
+      <%= f.submit %>
+      </li>
+    </ul>
 
-<% if @owner.errors.any? %>
-  <div class="error_report">
-    <% @owner.errors.full_messages.each do |msg| %>
-      <%= msg %>
-    <% end %>
-  </div>
-<% end %>
+  <% end %>
+
+  <% if @owner.errors.any? %>
+    <div class="error_report">
+      <% @owner.errors.full_messages.each do |msg| %>
+        <%= msg %>
+      <% end %>
+    </div>
+  <% end %>
+</section>
