Update CSS styles for forms

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,13 +1,25 @@
+* {
+  margin: 0;
+}
+
+html, body {
+  height: 100%;
+}
 body{
   font-family: 'Open Sans', sans-serif;
-  margin: 20px;
-  margin-top: 0px;
   background-color: #f7f7f7
 }
 
 #container {
+  min-height: 100%;
   max-width: 1100px;
-  margin: auto;
+  margin: 0 auto;
+  margin-bottom: -80px;
+}
+
+#container:after {
+  content: "";
+  display: block;
 }
 
 ul {
@@ -23,6 +35,19 @@ ul {
   font-weight: bold;
 }
 
+#footer, #containter:after {
+  height: 80px;
+}
+
+#footer {
+  text-align: center;
+  background: #606c76;
+}
+
+#footer-bar a {
+  display: inline-block;
+  margin-top: 10px;
+}
 
   .button,
   button {
@@ -71,10 +96,6 @@ a {
   text-decoration: none;
 }
 
-#footer{
-  text-align: center;
-  padding: 2em 0;
-}
 
 .profile-pic {
   width: 100px;
