--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -49,29 +49,24 @@ ul {
 
 
 
+.button,
+button {
+  background-color: #ff4448;
+  border: 0.01rem solid #ffffff;
+  color: #ffffff;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 0.7rem;
+  font-weight: bold;
+  height: 2.2rem;
+  letter-spacing: 0.1rem;
+  line-height: 2.2rem;
+  padding: 0 1rem;
+  text-align: center;
+  text-transform: uppercase;
+  white-space: nowrap;
+}
 
-
-
-
-
-
-  .button,
-  button {
-    background-color: #ff4448;
-    border: 0.01rem solid #ffffff;
-    color: #ffffff;
-    cursor: pointer;
-    display: inline-block;
-    font-size: 0.7rem;
-    font-weight: bold;
-    height: 2.2rem;
-    letter-spacing: 0.1rem;
-    line-height: 2.2rem;
-    padding: 0 1rem;
-    text-align: center;
-    text-transform: uppercase;
-    white-space: nowrap;
-  }
 
 
   .button:hover, .button:focus,
@@ -90,11 +85,11 @@ ul {
   }
 
 .search-field{
-  height: 1.85rem;
-  line-height: 1.85rem;
+  height: 1.85em;
+  line-height: 1.85em;
   margin-top: -10px;
   margin-right: -0.5em;
-  padding: 0.1rem 0.5rem
+  padding: 0.1rem 0.5em;
 }
 
 a {
@@ -107,6 +102,7 @@ a {
   width: 100px;
   height: 100px;
 }
+
 
 #form {
   max-width: 300px;
@@ -152,4 +148,3 @@ input[type="submit"] {
   background: #ff4448;
   color: #fff;
 }
-
