minor fix messsage system

--- a/app/views/messages/create.js.erb
+++ b/app/views/messages/create.js.erb
@@ -1,3 +1,5 @@
 <% publish_to conversation_messages_path(@conversation) do %>
   $("#chat").append("<%= j render(@message) %>");
+  $('.form-control').val('');
 <% end %>
+
