--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -16,4 +16,7 @@
  </div>
 <% end %>
 
+
+<%= link_to 'Back to Inbox', conversations_path %>
+
 <%= subscribe_to conversation_messages_path(@conversation) %>
