--- a/app/views/developers/index.html.erb
+++ b/app/views/developers/index.html.erb
@@ -8,7 +8,9 @@
 <% @developers.each do |developer| %>
 <div>
 <%= link_to developer.first_name, developer_path(developer) %>
-<%= link_to "Send Message", "#", class: "btn btn-success btn-xs start-conversation",
+<% if developer.id != current_user.id %>
+<%= link_to "Send Message", conversations_path(sender_id: current_user.id, recipient_id: developer.id), method: "post", class: "btn btn-success btn-xs start-conversation",
                     "data-sid" => current_user.id, "data-rip" => developer.id %>
+                    <% end %>
 </div>
 <% end %>
