--- a/app/views/developers/show.html.erb
+++ b/app/views/developers/show.html.erb
@@ -4,6 +4,10 @@
   <h4>Bio: <%= @developer.description %></h4>
   <% if has_avatar? @developer %>
     <%= link_to image_tag(@developer.avatar.url(:thumb)), @developer.avatar.url %>
+  <% elsif @auth %>
+    <%= image_tag(@auth['info']['image'], size:"100x100>") %>
+  <% else %>
+    <%= image_tag "blank-profile-pic.png", class: 'profile-pic' %>
   <% end %>
   <ul>
   <% @developer.skills.each do |skill| %>
