--- a/app/views/owners/show.html.erb
+++ b/app/views/owners/show.html.erb
@@ -4,7 +4,7 @@
 <% if has_avatar? @owner %>
   <%= link_to image_tag(@owner.avatar.url(:thumb)), @owner.avatar.url %>
 <% elsif @auth %>
-  <%= image_tag(@auth['info']['image'], size:"100x100>") %>
+  <%= image_tag(@auth['info']['image'], class: 'profile-pic') %>
 <% else %>
   <%= image_tag "blank-profile-pic.png", class: 'profile-pic' %>
 <% end %>
