Update CSS styles for forms

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,6 +1,9 @@
 /*
  *= require normalize-rails
  *= require main
+ *= require users
+ *= require businesses
+ *= require developers
  *= require conversations
  *= require_tree .
  *= require_self
