--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,30 +1,31 @@
 .facebook-button {
-    background: #3b5998;
-    border: 0.01rem solid #ffffff;
-	color: #ffffff;
-	cursor: pointer;
-	display: inline-block;
-	font-size: 0.7rem;
-	font-weight: bold;
-	height: 2.2rem;
-	letter-spacing: 0.1rem;
-	line-height: 2.2rem;
-	padding: 0 1rem;
-	text-align: center;
-	text-transform: uppercase;
-	white-space: nowrap;
-	float:left;
+  background: #3b5998;
+  color: #ffffff;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 0.7rem;
+  font-weight: bold;
+  height: 2.2rem;
+  letter-spacing: 0.1rem;
+  line-height: 2.2rem;
+  padding: 0 1rem;
+  text-align: center;
+  text-transform: uppercase;
+  white-space: nowrap;
+  float:left;
   }
 
  #facebook-link{
    width: 90%;
    height:2.2rem;
+   margin-bottom: 15px;
  }
 
  #github-link{
    width: 78%;
    height:2.2rem;
    background: #000000;
+   margin-bottom: 10px;
  }
 
  .logo-button{
@@ -34,19 +35,19 @@
  }
 
  .github-button {
-    float:left;
-    background: #000000;
-    border: 0.01rem solid #ffffff;
-	color: #ffffff;
-	cursor: pointer;
-	display: inline-block;
-	font-size: 0.7rem;
-	font-weight: bold;
-	height: 2.2rem;
-	letter-spacing: 0.1rem;
-	line-height: 2.2rem;
-	padding: 0 1em;
-	text-align: center;
-	text-transform: uppercase;
-	white-space: nowrap;
+  float:left;
+  background: #000000;
+  color: #ffffff;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 0.7rem;
+  font-weight: bold;
+  height: 2.2rem;
+  letter-spacing: 0.1rem;
+  line-height: 2.2rem;
+  padding: 0 1em;
+  text-align: center;
+  text-transform: uppercase;
+  white-space: nowrap;
+
   }
