--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,9 +23,9 @@
 <body>
   <div id='wrap'>
     <header id="header">
-      <div class='container'>
+      <div class='container  clearfix'>
         <h1 id="header-title"><%= link_to 'BuildMyBusiness', root_path%></a></h1>
-        <nav id = "navbar">
+        <nav id ="navbar">
             <% if current_user %>
               <%= link_to "Developers", developers_path %>
               <%= link_to current_user.first_name, user_path(current_user) %>
