Add business seed files

--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -26,8 +26,8 @@
     <h4>Status</h4>
   </div>
 
-  <div id='map-container'>
-    <div id="map"></div>
+  <div style='width: 800px;'>
+    <div id="map" style='width: 800px; height: 400px;'></div>
   </div>
 
   <script type="text/javascript">
@@ -36,6 +36,6 @@
      markers = handler.addMarkers(<%=raw @hash.to_json %>);
     handler.bounds.extendWith(markers);
     handler.fitMapToBounds();
-});
+    });
   </script>
 </section>
