--- a/app/views/developers/show.html.erb
+++ b/app/views/developers/show.html.erb
@@ -6,7 +6,7 @@
     <%= link_to image_tag(@developer.avatar.url(:thumb)), @developer.avatar.url %>
   <% elsif @auth %>
     <%= image_tag(@auth['info']['image'], class: 'profile-pic') %>
-  <% else %>
+  <% elsif !has_avatar? @developer%>
     <%= image_tag "blank-profile-pic.png", class: 'profile-pic' %>
   <% end %>
   <ul>
