--- a/app/views/owners/show.html.erb
+++ b/app/views/owners/show.html.erb
@@ -3,8 +3,8 @@
 <h4>About Me <%= @owner.description %></h4>
 <% if has_avatar? @owner %>
   <%= link_to image_tag(@owner.avatar.url(:thumb)), @owner.avatar.url %>
-<% elsif @auth %>
-  <%= image_tag(@auth['info']['image'], class: 'profile-pic') %>
+<% elsif @auth &&  @owner.id == current_user.id %>
+      <%= image_tag(@auth['info']['image'], class: 'profile-pic') %>
 <% else %>
   <%= image_tag "blank-profile-pic.png", class: 'profile-pic' %>
 <% end %>
