--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -18,9 +18,8 @@
     <% end %>
   </div>
 
-  <div>
-    <h4>Interested?</h4>
-  </div>
+
+<%= render partial: 'partials/matching', locals: {user: @owner }%>
 
   <div>
     <h4>Status: @business.status</h4>
