--- a/app/views/developers/show.html.erb
+++ b/app/views/developers/show.html.erb
@@ -25,76 +25,14 @@
 
   <% if @developer.received_reviews %>
   <% @developer.received_reviews.each do |review| %>
-  <div id="review-box">
-
-  <p><%= review.comment %> | by: <%= review.reviewer.first_name%> - <%=review.reviewer.type%></p>
-
-<h5>Timeliness
-  <div class="star-ratings-css">
-    <div class="star-ratings-css-top" style="width: <%=review.timeliness_rating * 20%>%"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
-    <div class="star-ratings-css-bottom"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
-  </div>
-</h5>
-
-<h5>Work Quality
-  <div class="star-ratings-css">
-    <div class="star-ratings-css-top" style="width: <%=review.quality_rating * 20%>%"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
-    <div class="star-ratings-css-bottom"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
-  </div>
-</h5>
-
-<h5>Communication
-  <div class="star-ratings-css">
-    <div class="star-ratings-css-top" style="width: <%=review.communication_rating * 20%>%"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
-    <div class="star-ratings-css-bottom"><span>★</span><span>★</span><span>★</span><span>★</span><span>★</span></div>
-  </div>
-</h5>
-</div>
+  <%= render partial: 'partials/review', locals: {review: review}%>
   <% end %>
 <% end %>
 
 
- <% unless current_user == @developer %>
- <% if ! @developer.matched?(current_user) %>
-        <%= link_to "Send Request", matches_path(id: @developer), :method => :post %>
-        <% end %>
-    <% end %>
-
-    <h4>Matches</h4>
-    <ul>
-        <% @developer.received_matches.each do |match| %>
-        <li>
-          <%= match.user.first_name %>
-          <%= match.status %>
-        </li>
-      <% end %>
-    </ul>
-
-    <ul>
-      <% @developer.sent_matches.each do |match| %>
-        <li>
-          <%= match.matched_user.first_name %>
-          <%= match.status %>
-        </li>
-      <% end %>
-    </ul>
-
-    <% if current_user == @developer %>
-        <h4> Requests</h4>
-        <ul>
-            <% @developer.received_matches.each do |match| %>
-            <% if match.accepted == "f" %>
-            <li>
-              <%= match.user.first_name %>
-              <%= link_to "Accept",  request_accept_match_path(:id => match), :method => "put" %>
-              <%= link_to "Decline",  request_reject_match_path(:id => match), :method => :delete %>
-            </li>
-            <% end %>
-          <% end %>
-        </ul>
-    <% end %>
+ <%= render partial: 'partials/matching', locals: {user: @developer}%>
 
 
 
-<br/><br/>
+
 </section>
