--- a/app/views/businesses/new.html.erb
+++ b/app/views/businesses/new.html.erb
@@ -22,7 +22,7 @@
       <%= f.label :photo %>
       <%= file_field_tag "images[]", type: :file, multiple: true %>
     </li>
-
+      <%= f.hidden_field :provider, value: "buildmybusiness" %>
     <li>
       <%= f.submit %>
     </li>
