--- a/app/views/partials/_matching.html.erb
+++ b/app/views/partials/_matching.html.erb
@@ -1,5 +1,7 @@
 <% unless current_user == user  %>
-  <% if ! user.matched?(current_user) && user.cross_type?(current_user) && ! @owner.closed_match? %>
+
+ <% if ! user.matched?(current_user) && user.cross_type?(current_user) && ! user.closed_match? %>
+
     <h4>Interested?</h4>
     <%= link_to "Send Request", matches_path(id: user), :method => :post %>
   <% end %>
