--- a/app/views/owners/show.html.erb
+++ b/app/views/owners/show.html.erb
@@ -8,12 +8,21 @@
 <% else %>
   <%= image_tag "blank-profile-pic.png", class: 'profile-pic' %>
 <% end %>
+<hr>
+<div class= "show-biz" >
+<h3> <%= @owner.first_name %>'s business: </h3>
+<%= link_to @owner.business.name, business_path(@owner.business) %>
+<p><%= @owner.business.description %></p>
+</div>
 
-<% if @owner.editable_by?(current_user) %>
-  <%= link_to 'edit', edit_owner_path(@owner) %>
-<% end %>
 
+
+
+<% if @owner.business && @owner.editable_by?(current_user) %>
+  <%= link_to 'edit your business', edit_business_path(@owner.business) %>
+<% elsif @owner.editable_by?(current_user) %>
   <%=link_to 'Create your Business Page', new_business_path %>
+<% end %>
 
 
 <% if @owner.id != current_user.id %>
