Add Jquery plugin for fade in and out

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,5 +1,6 @@
 /*
  *= require normalize-rails
+ *= require animsition/animsition.min.css
  *= require main
  *= require users
  *= require businesses
