--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -1,3 +1,4 @@
+
 <div>
   <div id='search-bar'>
     <%= form_tag businesses_path, method: :get do %>
@@ -12,7 +13,7 @@
   <% @businesses.each do |business| %>
     <section class='business'>
       <div class='business-name'>
-        <h3><%= link_to business.name, business_path(business)%></h3>
+        <h3><%= link_to business.name, business_path(business), class: "animsition-link" %></h3>
       </div>
       <div class='business-info'>
         <h4><%=business.location%></h4>
@@ -27,3 +28,4 @@
     </section>
   <% end %>
 </section>
+
