--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,9 +19,10 @@
    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
   <%= csrf_meta_tags %>
 
+
 </head>
 <body>
-  <div id='wrap'>
+  <div id='wrap' class='animsition'>
     <header id="header">
       <div class='container  clearfix'>
         <h1 id="header-title"><%= link_to 'BuildMyBusiness', root_path%></a></h1>
